the first cell in each data row have a red background

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
    <style>
       /*the first row of the table bold*/
       tr:first-of-type{
-      font-weight: bold;
+        font-weight: bold;
       }
-
-      
+      /*the first cell in each data row have a red background*/
+      td:first-of-type{
+        background: red;
+        color: white;
+      }
    </style>
  </head>
  <body>
