--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         background: red;
         color: white;
       }
+      /*"zebra stripe" the backgrounds of the rows, alternating between white and #eee*/
+      tr:nth-child(2n+3) {
+        background: #eee;
+      }
    </style>
  </head>
  <body>
