the label turn red when the checkbox is clicked

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       tr:nth-child(2n+3) {
         background: #eee;
       }
+      /*the label turn red when the checkbox is clicked*/
+      input:checked + label {
+      color: red;
+      }
    </style>
  </head>
  <body>
