the first letter of the pepper name huge

--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
       }
       /*the label turn red when the checkbox is clicked*/
       input:checked + label {
-      color: red;
+        color: red;
+      }
+      /*the first letter of the pepper name huge*/
+      a{
+        display:table-cell;
+      }
+      a:first-letter{
+        font-size: 3em;
+        font-weight: bold;
+        float: left;
+        line-height: 1;
+        padding-right: 0.1em;
       }
    </style>
  </head>
