any pepper with hotness above 1 billion and color the link red

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         line-height: 1;
         padding-right: 0.1em;
       }
+      /*any pepper with hotness above 1 billion and color the link red*/
+      a[title*=',000,']{
+      color:red;
+      }
    </style>
  </head>
  <body>
